@@ -1477,156 +1477,6 @@ if (isActionAccessible($guid, $connection2, '/modules/Planner/planner_view_full.
                         echo '</tr>';
                         echo '</table>';
 
-                            //Unit resources
-                            if ($row['gibbonUnitID'] != '') {
-                                try {
-                                    $dataResources = array('gibbonUnitID' => $row['gibbonUnitID']);
-                                    $sqlResources = 'SELECT * FROM gibbonUnit WHERE gibbonUnitID=:gibbonUnitID';
-                                    $resultResources = $connection2->prepare($sqlResources);
-                                    $resultResources->execute($dataResources);
-                                } catch (PDOException $e) {
-                                    echo "<div class='error'>".$e->getMessage().'</div>';
-                                }
-                                if ($resultResources->rowCount() > 0) {
-                                    $rowResources = $resultResources->fetch();
-                                }
-                                $shareUnitOutline = getSettingByScope($connection2, 'Planner', 'shareUnitOutline');
-                                if ($row['role'] == 'Teacher' or $shareUnitOutline == 'Y') {
-                                    //Check for outcomes
-                                    try {
-                                        $dataOutcomes = array('gibbonUnitID' => $row['gibbonUnitID']);
-                                        $sqlOutcomes = "SELECT gibbonUnitOutcome.*, scope, name, nameShort, category, gibbonYearGroupIDList FROM gibbonUnitOutcome JOIN gibbonOutcome ON (gibbonUnitOutcome.gibbonOutcomeID=gibbonOutcome.gibbonOutcomeID) WHERE gibbonUnitID=:gibbonUnitID AND active='Y' ORDER BY sequenceNumber";
-                                        $resultOutcomes = $connection2->prepare($sqlOutcomes);
-                                        $resultOutcomes->execute($dataOutcomes);
-                                    } catch (PDOException $e) {
-                                        echo "<div class='error'>".$e->getMessage().'</div>';
-                                    }
-                                    echo '</table>';
-
-                                    if (@$rowResources['attachment'] != '' or @$rowResources['details'] != '' or $resultOutcomes->rowCount() > 0) {
-                                        echo "<h2 style='padding-top: 30px'>".__($guid, 'Unit Content').'</h2>';
-                                        echo "<table class='smallIntBorder' cellspacing='0' style='width: 100%;'>";
-                                        echo '<tr>';
-                                        echo "<td style='text-align: justify; padding-top: 5px; width: 33%; vertical-align: top' colspan=3>";
-                                        if ($rowResources['details'] != '') {
-                                            echo $rowResources['details'];
-                                        }
-                                        if ($rowResources['attachment'] != '') {
-                                            echo "<a href='".$_SESSION[$guid]['absoluteURL'].'/'.$rowResources['attachment']."'>".__($guid, 'Downloadable Unit Outline').'</a>';
-                                        }
-                                        echo '</td>';
-                                        echo '</tr>';
-                                        if ($resultOutcomes->rowCount() > 0) {
-                                            echo "<tr class='break'>";
-                                            echo "<td style='text-align: justify; padding-top: 5px; width: 33%; vertical-align: top' colspan=3>";
-                                            echo '<h3>'.__($guid, 'Unit Outcomes').'</h3>';
-                                            echo '</td>';
-                                            echo '</tr>';
-                                            echo '<tr>';
-                                            echo "<td style='text-align: justify; padding-top: 5px; width: 33%; vertical-align: top' colspan=3>";
-                                            echo "<table cellspacing='0' style='width: 100%'>";
-                                            echo "<tr class='head'>";
-                                            echo '<th>';
-                                            echo __($guid, 'Scope');
-                                            echo '</th>';
-                                            echo '<th>';
-                                            echo __($guid, 'Category');
-                                            echo '</th>';
-                                            echo '<th>';
-                                            echo __($guid, 'Name');
-                                            echo '</th>';
-                                            echo '<th>';
-                                            echo __($guid, 'Year Groups');
-                                            echo '</th>';
-                                            echo '<th>';
-                                            echo __($guid, 'Actions');
-                                            echo '</th>';
-                                            echo '</tr>';
-
-                                            $count = 0;
-                                            $rowNum = 'odd';
-                                            while ($rowOutcomes = $resultOutcomes->fetch()) {
-                                                if ($count % 2 == 0) {
-                                                    $rowNum = 'even';
-                                                } else {
-                                                    $rowNum = 'odd';
-                                                }
-
-												//COLOR ROW BY STATUS!
-												echo "<tr class=$rowNum>";
-                                                echo '<td>';
-                                                echo '<b>'.$rowOutcomes['scope'].'</b><br/>';
-                                                if ($rowOutcomes['scope'] == 'Learning Area' and $gibbonDepartmentID != '') {
-                                                    try {
-                                                        $dataLearningArea = array('gibbonDepartmentID' => $gibbonDepartmentID);
-                                                        $sqlLearningArea = 'SELECT * FROM gibbonDepartment WHERE gibbonDepartmentID=:gibbonDepartmentID';
-                                                        $resultLearningArea = $connection2->prepare($sqlLearningArea);
-                                                        $resultLearningArea->execute($dataLearningArea);
-                                                    } catch (PDOException $e) {
-                                                        echo "<div class='error'>".$e->getMessage().'</div>';
-                                                    }
-                                                    if ($resultLearningArea->rowCount() == 1) {
-                                                        $rowLearningAreas = $resultLearningArea->fetch();
-                                                        echo "<span style='font-size: 75%; font-style: italic'>".$rowLearningAreas['name'].'</span>';
-                                                    }
-                                                }
-                                                echo '</td>';
-                                                echo '<td>';
-                                                echo '<b>'.$rowOutcomes['category'].'</b><br/>';
-                                                echo '</td>';
-                                                echo '<td>';
-                                                echo '<b>'.$rowOutcomes['nameShort'].'</b><br/>';
-                                                echo "<span style='font-size: 75%; font-style: italic'>".$rowOutcomes['name'].'</span>';
-                                                echo '</td>';
-                                                echo '<td>';
-                                                echo getYearGroupsFromIDList($guid, $connection2, $rowOutcomes['gibbonYearGroupIDList']);
-                                                echo '</td>';
-                                                echo '<td>';
-                                                echo "<script type='text/javascript'>";
-                                                echo '$(document).ready(function(){';
-                                                echo "\$(\".unitDescription-$count\").hide();";
-                                                echo "\$(\".unitShow_hide-$count\").fadeIn(1000);";
-                                                echo "\$(\".unitShow_hide-$count\").click(function(){";
-                                                echo "\$(\".unitDescription-$count\").fadeToggle(1000);";
-                                                echo '});';
-                                                echo '});';
-                                                echo '</script>';
-                                                if ($rowOutcomes['content'] != '') {
-                                                    echo "<a class='unitShow_hide-$count' onclick='false' href='#'><img style='padding-left: 0px' src='".$_SESSION[$guid]['absoluteURL'].'/themes/'.$_SESSION[$guid]['gibbonThemeName']."/img/page_down.png' alt='".__($guid, 'Show Comment')."' onclick='return false;' /></a>";
-                                                }
-                                                echo '</td>';
-                                                echo '</tr>';
-                                                if ($rowOutcomes['content'] != '') {
-                                                    echo "<tr class='unitDescription-$count' id='unitDescription-$count'>";
-                                                    echo '<td colspan=6>';
-                                                    echo $rowOutcomes['content'];
-                                                    echo '</td>';
-                                                    echo '</tr>';
-                                                }
-                                                echo '</tr>';
-
-                                                ++$count;
-                                            }
-                                            echo '</table>';
-                                            echo '</td>';
-                                            echo '</tr>';
-                                        }
-                                        echo '</table>';
-                                    }
-                                } else {
-                                    if ($rowResources['attachment'] != '') {
-                                        echo "<h2 style='padding-top: 30px'>Unit Content</h2>";
-                                        echo "<table class='smallIntBorder' cellspacing='0' style='width: 100%;'>";
-                                        echo '<tr>';
-                                        echo "<td style='text-align: justify; padding-top: 5px; width: 33%; vertical-align: top' colspan=3>";
-                                        echo "<a href='".$_SESSION[$guid]['absoluteURL'].'/'.$rowResources['attachment']."'>".__($guid, 'Downloadable Unit Outline').'</a>';
-                                        echo '</td>';
-                                        echo '</tr>';
-                                        echo '</table>';
-                                    }
-                                }
-                            }
-
                         //Participants & Attendance
                         $gibbonCourseClassID = $row['gibbonCourseClassID'];
                         $columns = 2;
